--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-HelloWorld
+<!DOCTYPE html>
+<html lang="fr">
+    <head>
+        <title>Enzo Mancini</title>
+        <meta charset="utf-8" />
+    </head>
+    <body>
+        HelloWorld
+    </body>
+</html>
