--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
     <head>
         <title>Enzo Mancini</title>
         <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width">
+        <link href="./styles.css" rel="stylesheet" />
     </head>
+    <div class="header">
+        <a href="#default" class="logo">CompanyLogo</a>
+        <div class="header-right">
+            <a class="active" href="#home">Home</a>
+            <a href="#contact">Contact</a>
+            <a href="#about">About</a>
+        </div>
+    </div> 
     <body>
         HelloWorld
     </body>
