--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
         <link href="./styles.css" rel="stylesheet" />
     </head>
     <div class="header">
-        <a href="#default" class="logo">CompanyLogo</a>
-        <div class="header-right">
-            <a class="active" href="#home">Home</a>
+        <a href="#default" class="logo">Portfolio</a>
+        <div class="header-left">
+            <a class="active" href="#home">Accueil</a>
+            <a href="#presentation">Présentation</a>
+            <a href="#projet">Projet</a>
             <a href="#contact">Contact</a>
-            <a href="#about">About</a>
+            <a href="#about">Lien</a>
         </div>
     </div> 
     <body>
-        HelloWorld
+        
     </body>
 </html>
