--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
         <link href="./styles.css" rel="stylesheet" />
     </head>
     <div class="header">
-        <a href="#default" class="logo">Portfolio</a>
+        <a href="#accueil" class="logo">Portfolio</a>
         <div class="header-left">
-            <a class="active" href="#home">Accueil</a>
+            <a class="active" href="#accueil">Accueil</a>
             <a href="#presentation">Présentation</a>
             <a href="#projet">Projet</a>
             <a href="#contact">Contact</a>
-            <a href="#about">Lien</a>
+            <a href="#lien">Lien</a>
         </div>
     </div> 
     <body>
