--- a/index.html
+++ b/index.html
@@ -6,17 +6,19 @@
         <meta name="viewport" content="width=device-width">
         <link href="./styles.css" rel="stylesheet" />
     </head>
-    <div class="header">
-        <a href="#accueil" class="logo">Portfolio</a>
-        <div class="header-left">
-            <a class="active" href="#accueil">Accueil</a>
-            <a href="#presentation">Présentation</a>
-            <a href="#projet">Projet</a>
-            <a href="#contact">Contact</a>
-            <a href="#lien">Lien</a>
-        </div>
-    </div> 
     <body>
-        
+        <div class="header">
+            <a href="#accueil" class="logo">Portfolio</a>
+            <div class="header-left">
+                <a class="active" href="#accueil">Accueil</a>
+                <a href="#presentation">Présentation</a>
+                <a href="#projet">Projet</a>
+                <a href="#contact">Contact</a>
+                <a href="#lien">Lien</a>
+            </div>
+        </div> 
+        <div class="accueil">
+
+        </div>
     </body>
 </html>
