--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <title>Enzo Mancini</title>
-        <meta charset="utf-8" />
+        <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width">
         <link href="./styles.css" rel="stylesheet" />
     </head>
@@ -16,7 +16,10 @@
                 <a href="#contact">Contact</a>
                 <a href="#lien">Lien</a>
             </div>
-        </div> 
+            <div class="progress-bar" id="progressBar"></div>
+            <script src="./scriptBarre.js"></script>
+        </div>
+         
         <div class="accueil">
 
         </div>
