--- a/index.html
+++ b/index.html
@@ -7,18 +7,20 @@
         <link href="./styles.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="header">
-            <a href="#accueil" class="logo">Portfolio</a>
-            <div class="header-left">
-                <a class="active" href="#accueil">Accueil</a>
-                <a href="#presentation">Présentation</a>
-                <a href="#projet">Projet</a>
-                <a href="#contact">Contact</a>
-                <a href="#lien">Lien</a>
+        <header>
+            <div class="header">
+                <a href="#accueil" class="logo">Portfolio</a>
+                <div class="header-left">
+                    <a class="active" href="#accueil">Accueil</a>
+                    <a href="#presentation">Présentation</a>
+                    <a href="#projets">Projets</a>
+                    <a href="#competences">Compétences</a>
+                    <a href="#contact">Contact</a>
+                </div>
+                <div class="progress-bar" id="progressBar"></div>
+                <script src="./scriptBarre.js"></script>
             </div>
-            <div class="progress-bar" id="progressBar"></div>
-            <script src="./scriptBarre.js"></script>
-        </div>
+        </header>
          
         <div class="accueil">
                     t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>
