--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <title>Enzo Mancini</title>
+        <title>Enzo Mancini - Portfolio</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width">
         <link href="./styles.css" rel="stylesheet" />
@@ -21,9 +21,7 @@
         </div>
          
         <div class="accueil">
-                    t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>
-                    t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>
-                    t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>t<br>
+                    <img src="./img/photo_enzo.webp" alt="Photo de Enzo Mancini" class="circular-image">
         </div>
     </body>
 </html>
