--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         </div>
          
         <div class="accueil">
-                    <img src="./img/photo_enzo.webp" alt="Photo de Enzo Mancini" class="circular-image">
+            <div>
+                <img src="./img/photo_enzo.webp" alt="Photo de Enzo Mancini" class="circular-image">
+            </div>    
         </div>
     </body>
 </html>
