--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <title>Enzo Mancini - Portfolio</title>
+        <title><img src="./img/photo_enzo.webp" alt="Imge-title"> Mancini - Portfolio</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width">
         <link href="./styles.css" rel="stylesheet" />
