--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <title><img src="./img/photo_enzo.webp" alt="Imge-title"> Mancini - Portfolio</title>
+        <title>Enzo Mancini - Portfolio</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width">
         <link href="./styles.css" rel="stylesheet" />
+        <link rel="icon" href="./img/photo_enzo.webp" type="image/x-icon">
     </head>
     <body>
         <div class="header">
