--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
          
         <div class="accueil">
             <div>
+                <h1>Bonzour lé caup1</h1>
                 <img src="./img/photo_enzo.webp" alt="Photo de Enzo Mancini" class="circular-image">
             </div>    
         </div>
